--- a/index.html
+++ b/index.html
@@ -1,1 +1,54 @@
-Hello world
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+<meta charset="UTF-8"/>
+<title>Resume</title>
+<link rel="stylesheet" href="style.css">
+
+    </head>
+    <body>
+    <header class="header">
+        <img src="./images/Adarsh.jpg" alt="Adarsh"/>
+        <h1 >   Adarsh Raj  	   </h1>
+        <a  href="mailto:adarshraj2721@gmail.com?subject=How%20are%20you%20&body" target="_blank">adarshraj2721@gmail.com</a> 
+
+    </header>
+    <section class="details">
+    <section>
+        <h2>Intro:-</h2>
+        <p>Status : Student.</p>
+        <p> D.O.B   : 27.11.2001.</p>
+        <p> Nationality : Indian.</p>
+        <p>Gender : Male.</p>
+        <p>Language : English,Hindi.</p>
+        <p>Conatact Address : Belbanwa Motihari,East-Champarn (Bihar)845401.</p>
+        <p>Contact No. : 8674837292.</p>
+    </section>
+    <section>
+        <h2>Educational Background:-</h2>
+        <p>10th - 2017 <b>(CBSE)</b>Motihari.</p>
+        <p>12th - 2017-2019   <b>I.Sc</b> (Bihar Board)Muzaffarpur.</p>
+        <p> 2019 - Present <b>BCA</b>(Bihar University) Motihari.</p>
+    </section>
+    <section>
+        <h2>Other Certificate:-</h2>
+        <p>Learning SQL Programming (2017)</p>
+        <p>Succeeding in Web Development: Full Stack and Front End</p>
+    </section>
+    <section>
+        <h2>Skill</h2>
+        <p>HTML</p>
+        <p>CSS</p>
+        <P>C        </P>
+        <P>C++</P>
+        <P>DATA SCIENCE</P>
+    </section>
+    </section>
+    <footer class="footer">
+        <a href="https://www.facebook.com/adarshsahil.raj/ " target="_blank">Facebook</a>
+        <a href="https://www.twitter.com/adarshraj2720/" target="_blank">Twitter</a>
+        <a href="https://www.instagram.com/adarsh_raj2720/" target="_blank">Instagram</a>
+        <a href="https://www.linkedin.com/in/adarsh-raj-56a9631b2/" target="_blank">LinkedIn</a>
+    </footer>
+    </body>
+    </html>
